# Multi-Agents-With-MCP-and-A2A

./: README.md  pyproject.toml  test.md  test.py
demo/ui/service/server/: adk_host_manager.py
mcp_server/: server.py
samples/python/: pyproject.toml
samples/python/agents/flight_search_agent/: agent.py  agent_executor.py  main.py
samples/python/agents/hotel_search_agent/: agent.py  agent_executor.py  main.py  pyproject.toml
samples/python/agents/itinerary_generation_agent/: agent.py  agent_executor.py  main.py  pyproject.toml
