[project]
name = "flight-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.5",
    "google-adk>=1.1.1",
    "google-search-results>=2.4.2",
    "mcp-flight-search>=0.2.1",
    "mcp[cli]>=1.9.1",
    "serpapi>=0.1.5",
]
