[project]
name = "flight-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.5",
    "click>=8.2.1",
    "google-adk>=1.1.1",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "langchain-core>=0.3.62",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.7",
    "mcp-flight-search>=0.2.1",
    "mcp[cli]>=1.9.1",
    "serpapi>=0.1.5",
]
